--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,23 @@
-<%= # sample index html
-# <form action="/phrase_parser">
-#   <div class="form-group">
-#      <label for="title">gimme phrase or word!</label>
-#      <input name="phrase1" class="form-control" type="text">
-#      <label for="title">gimme another!</label>
-#      <input name="phrase2" class="form-control" type="text">
-#   </div>
-#   <hr>
-#   <button action="/" class="btn btn-success">what am i?</button>
-# </form>
-%>
+<h1>Library</h1>
+
+<% if @books.any? %>
+  <ul>
+    <% @books.each do |book| %>
+    <li><%= book.title %>, <%= book.author %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <em>your library is empty</em>
+<% end %>
+
+<hr>
+
+<form action="/add_book" method="post">
+  <label>Title</label>
+  <input type="text" name="title">
+  <label>Author</label>
+  <input type="text" name="author">
+  <label>Genre</label>
+  <input type="text" name="genre">
+  <button type="submit">Add book</button>
+</form>
