add functionality to delete a book

--- a/views/edit_book.erb
+++ b/views/edit_book.erb
@@ -7,7 +7,7 @@
   <button type="submit">Update</button>
 </form>
 <hr>
-<form action="/edit_book" method="post">
+<form action="/<%= @book.id %>/edit_book" method="post">
   <input type="hidden" name="_method" value="delete">
   <button type="submit">Remove Book</button>
 </form>
