add UI for adding a patron to the db

--- a/views/edit_book.erb
+++ b/views/edit_book.erb
@@ -11,3 +11,6 @@
   <input type="hidden" name="_method" value="delete">
   <button type="submit">Remove Book</button>
 </form>
+
+<hr>
+<a href="/">Home</a> | <a href="/librarian">Librarian Portal</a>
