--- a/views/index.erb
+++ b/views/index.erb
@@ -3,4 +3,4 @@
 
 <h3>Log into the online portal</h3>
 I am a <a href="/librarian">Librarian</a><br>
-I am a <a href="/patron">Patron</a>
+I am a <a href="/patron">Member</a>
